# Topicos_Avancados_2026_1_Equipe_JUD_3_atividade1

./: .gitignore  LICENSE  Makefile  README-EN.md  README.md  SECURITY.md  main.py  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml
docs/: intro.md  references.md  slide.md
docs/architecture/: _category_.json  backend.md  dashboard.md  data-flow.md  overview.md
docs/assets/: marp-google-style.css
docs/curation/: _category_.json  basic-legislation.md  difficulty-level.md  overview.md  prompts.md
docs/datasets/: _category_.json  oab-bench.md  oab-exams.md  overview.md  team-distribution.md
docs/evaluation/: _category_.json  cross-evaluation.md  exact-evaluation.md  overview.md
docs/evaluation/metrics/: _category_.json  accuracy-precision.md  bertscore.md  bleu.md  comparison.md  rouge.md
docs/getting-started/: installation.md  prerequisites.md  project-structure.md  quick-start.md
docs/inference/: _category_.json  cli-reference.md  hardware.md  models.md  overview.md  prompts.md
docs/pdf/: main.tex
docs/results/: _category_.json  analysis.md  oab-bench-results.md  oab-exams-results.md  overview.md
prompts/curador/area-​​expertise/: system_template.minijinja  user_template.minijinja
prompts/curador/area_expertise/: system_template.minijinja  (+1 more)
prompts/oab_bench/: user_template.minijinja
prompts/oab_exams/: system_template.minijinja  user_template.minijinja
src/: __init__.py  dataset_manager.py  evaluation_manager.py  execution_manager.py  ollama_manager.py  storage_manager.py
src/cli/: app.py
src/datasets/: __init__.py  base.py  loader_factory.py  oab_bench_loader.py  oab_exams_loader.py
src/ericles/: evaluate.py  evaluate_comparative.py  leaderboard.py  load_dataset.py  prepare_questions.py  requirements.txt  run_models.py
src/evaluation/: __init__.py  cross_model_evaluator.py  exact_match_evaluator.py
src/execution/: __init__.py  base.py  executor_factory.py  oab_bench_executor.py  oab_exams_executor.py
src/judgment/: __init__.py  judge_manager.py
src/llm/: __init__.py  base_client.py  ollama_client.py  openai_client.py
src/prompts/: __init__.py  renderer.py
src/publishing/: __init__.py  publisher.py  readme_generator.py
src/reinan/: .gitignore  CONTRIBUTING.md  Makefile  README.md  main.py  pyproject.toml
src/reinan/data/: dataset_manager.py
src/reinan/prompts/curador/basic-legislation/: user_template.minijinja
src/reinan/prompts/curador/difficulty-level/: user_template.minijinja
src/reinan/prompts/oab_bench/: user_template.minijinja
src/reinan/prompts/oab_exams/: system_template.minijinja
src/reinan/src/: evaluation_manager.py  execution_manager.py  storage_manager.py
src/reporting/: __init__.py  base_chart_generator.py  chart_generator_factory.py  oab_bench_chart_generator.py  oab_exams_chart_generator.py
src/storage/: __init__.py  csv_serializer.py  file_serializer.py  json_serializer.py  local_storage.py
(+30 files in other folders)
