[project]
name = "reinan-jud"
version = "0.1.0"
description = "Repositório com os resultados da avaliação feita por Reinan."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.3",
    "typer>=0.12.0",
    "ollama>=0.3.0",
    "jinja2>=3.1.6",
    "evaluate>=0.4.6",
    "rouge-score>=0.1.2",
    "bert-score>=0.3.13",
    "scikit-learn>=1.8.0",
    "requests>=2.31.0",
    "openai>=2.30.0",
]

[project.scripts]
reinan-cli = "src.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "py2puml>=0.11.0",
    "ruff>=0.15.7",
]
